--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Coder React 1er Preentrega</title>
+    <title>Coder React 2da Preentrega</title>
   </head>
   <body>
-    <div id="root" class="contenedor"></div>
+    <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
